--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,6 @@
 
 0.2 (WIP)
-*Integration with timewarrior tracking every second
+*Integration with timewarrior tracking every second (see https://github.com/liloman/warriors)
 
 0.1
 *Client/Server/Trayicon
